Fixed overlapping in home-page

--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -76,3 +76,17 @@
     max-height: 100%;
     object-fit: contain;
   }
+
+  .content-wrapper {
+    padding: 10px;
+    background-color: #ffffff;
+  }
+  
+  .image-wrapper {
+    text-align: center;
+  }
+  
+  .image-wrapper img {
+    max-width: 100%;
+    height: auto;
+  }
